--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://sidon.github.io/acme/
 languageCode: en-us 
 title: Learning Hugo, Acme Corporation 
-theme: Universal
+theme: Eclectic
 author: 
   facebook: "https://facebook.com/example" 
   twitter: "https://twitter.com/example" 
@@ -12,16 +12,16 @@ author:
   hours: "**Mon-Fri:** 9:00AM - 6:00PM, ET" 
 
 menu:
-  main: 
-    - identifier: about 
-      name: "About"
-      url: /about 
-      weight: 100 
-    - identifier: contact 
-      name: Contact 
-      url: /contact 
-      weight: 200 
-params: 
+  main:
+    - identifier: about
+      name: About
+      url: /about
+      weight: 100
+    - identifier: contact
+      name: Contact
+      url: /contact
+      weight: 200
+params:
   color: "#4f46e5"
   copyright: "Copyright &copy; 2022 Acme Corporation.
     All Rights Reserved."
@@ -34,8 +34,32 @@ params:
       all. Browse through our collection of various
       forms with different thicknesses and line styles.
       We shape the world. You live in it.
+
+
   - title: Recent Blog Posts
     recents: blog
     recentCount: 7
   - title: Contact Us
     contact: true
+  style: blue
+  logo: /image/logo.png
+  logo_small: /image/logo.png
+  about_us: >
+    Acme Corporation is the world's leading manufacturer
+    of digital shapes. From squares and circles to
+    triangles and hexagons, we have it all. Browse through
+    our collection of various forms with different
+    thicknesses and line styles. We shape the world.
+    You live in it.
+
+
+  recent_posts:
+    enable: true
+
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
+  highlight:
+    lineNos: true
+enableEmoji: true
